Bug: fixed bug where images where not sliding on mobile

--- a/src/styles/layout/_portfolio.scss
+++ b/src/styles/layout/_portfolio.scss
@@ -1,6 +1,7 @@
 .portfolio {
   @include section_padding;
   background-color: $background-secondary;
+  overflow: hidden;
 
   &__box {
     margin: 10rem 0;
